deploy: 09d14b8984a501a6d69637c43be740f07d9f4ba5

--- a/listplace_test.html
+++ b/listplace_test.html
@@ -67,126 +67,252 @@
             <table class="table" id="placesTable">
                <thead>
                   <tr>
-                     <th scope="col" width="20" tabulator-formatter="html" tabulator-headerSort="false" tabulator-download="false" tabulator-visible="false">#</th>
                      <th scope="col">name</th>
-                     <th scope="col" tabulator-visible="false">lat</th>
-                     <th scope="col" tabulator-visible="false">lng</th>
+                     <th scope="col">lat</th>
+                     <th scope="col">lng</th>
                      <th scope="col" tabulator-visible="false">id</th>
-                     <th scope="col" tabulator-visible="false">geonames</th>
-                     <th scope="col">mentions</th>
+                     <th scope="col">authority</th>
+                     <th scope="col">related_objects</th>
                   </tr>
                </thead>
                <tbody>
                   <tr>
-                     <td><a href="FCG.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>Franziskanerkirche</td>
                      <td>47.070483333333</td>
                      <td>15.436780555556</td>
                      <td> # FCG</td>
                      <td>
-                        <idno type="URL" subtype="GEONAMES">https://sws.geonames.org/2761369</idno>
+                        <ul>
+                           <li><a href="http://d-nb.info/gnd/4482538-9">GND</a></li>
+                           <li><a href="https://www.wikidata.org/entity/Q64487580">Wikidata</a></li>
+                        </ul>
                      </td>
-                     <td></td>
+                     <td>
+                        <ul></ul>
+                     </td>
                   </tr>
                   <tr>
-                     <td><a href="Graz.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>Graz</td>
                      <td>47.07083333333333</td>
                      <td>15.438611111111111</td>
                      <td> # Graz</td>
-                     <td>https://sws.geonames.org/2778058
-                        <idno type="URL" subtype="GEONAMES">https://sws.geonames.org/2761369</idno>
+                     <td>
+                        <ul>
+                           <li><a href="http://d-nb.info/gnd/4021912-4">GND</a></li>
+                           <li><a href="https://sws.geonames.org/2778058">GEONAMES</a></li>
+                           <li><a href="https://www.wikidata.org/entity/Q13298">WIKIDATA</a></li>
+                        </ul>
                      </td>
-                     <td>Das 4. Respons BuchA 64/41A 67/19Das 4. Respons BuchA 67/17Antiphonarium de Tempore et Sanctis Pro Choro
-                        GraecensiA 64/42S 1/26A 64/39S 1/45S 1/39A 64/43A 67/23A 67/18S 1/28A 64/37A 63/51S 1/24A 67/20Tota pulchraA 64/40A 67/43Pro divino officio in choroS 1/44S 1/30S 1/27A 67/22A 64/38</td>
+                     <td>
+                        <ul>
+                           <li><a href="A67_41.html">Das 4. Respons Buch</a></li>
+                           <li><a href="A64_41.html">A 64/41</a></li>
+                           <li><a href="A67_19.html">A 67/19</a></li>
+                           <li><a href="A67_42.html">Das 4. Respons Buch</a></li>
+                           <li><a href="A67_17.html">A 67/17</a></li>
+                           <li><a href="S1_25.html">Antiphonarium de Tempore et Sanctis Pro Choro
+                                 Graecensi</a></li>
+                           <li><a href="A64_42.html">A 64/42</a></li>
+                           <li><a href="S1_26.html ">S 1/26</a></li>
+                           <li><a href="A64_39.html">A 64/39</a></li>
+                           <li><a href="S1_45.html">S 1/45</a></li>
+                           <li><a href="S1_39.html">S 1/39</a></li>
+                           <li><a href="A64_43.html">A 64/43</a></li>
+                           <li><a href="A67_23.html">A 67/23</a></li>
+                           <li><a href="A67_18.html">A 67/18</a></li>
+                           <li><a href="S1_28.html">S 1/28</a></li>
+                           <li><a href="A64_37.html">A 64/37</a></li>
+                           <li><a href="A63_51.html">A 63/51</a></li>
+                           <li><a href="S1_24.html">S 1/24</a></li>
+                           <li><a href="A67_20.html">A 67/20</a></li>
+                           <li><a href="S1_19.html">Tota pulchra</a></li>
+                           <li><a href="A64_40.html">A 64/40</a></li>
+                           <li><a href="A67_43.html">A 67/43</a></li>
+                           <li><a href="A67_27.html">Pro divino officio in choro</a></li>
+                           <li><a href="S1_44.html">S 1/44</a></li>
+                           <li><a href="S1_30.html">S 1/30</a></li>
+                           <li><a href="S1_27.html">S 1/27</a></li>
+                           <li><a href="A67_22.html">A 67/22</a></li>
+                           <li><a href="A64_38.html">A 64/38</a></li>
+                        </ul>
+                     </td>
                   </tr>
                   <tr>
-                     <td><a href="Ljubljana.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>Ljubljana</td>
                      <td>46.05138888888889</td>
                      <td>14.50611111111111</td>
                      <td> # Ljubljana</td>
-                     <td>https://sws.geonames.org/3239318
-                        <idno type="URL" subtype="GEONAMES">https://sws.geonames.org/2761369</idno>
+                     <td>
+                        <ul>
+                           <li><a href="http://d-nb.info/gnd/4073953-3">GND</a></li>
+                           <li><a href="https://sws.geonames.org/3239318">GEONAMES</a></li>
+                           <li><a href="https://www.wikidata.org/entity/Q437">WIKIDATA</a></li>
+                        </ul>
                      </td>
-                     <td>A 64/41A 64/42A 64/39A 64/43A 64/37A 64/51A 64/40A 64/38</td>
+                     <td>
+                        <ul>
+                           <li><a href="A64_41.html">A 64/41</a></li>
+                           <li><a href="A67_42.html">A 64/42</a></li>
+                           <li><a href="A64_39.html">A 64/39</a></li>
+                           <li><a href="A64_43.html">A 64/43</a></li>
+                           <li><a href="A64_37.html">A 64/37</a></li>
+                           <li><a href="A64_51.html">A 64/51</a></li>
+                           <li><a href="A64_40.html">A 64/40</a></li>
+                           <li><a href="A64_38.html">A 64/38</a></li>
+                        </ul>
+                     </td>
                   </tr>
                   <tr>
-                     <td><a href="Wien.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>Wien</td>
                      <td>48.208333333333336</td>
                      <td>16.3725</td>
                      <td> # Wien</td>
-                     <td>https://sws.geonames.org/2761369
-                        <idno type="URL" subtype="GEONAMES">https://sws.geonames.org/2761369</idno>
+                     <td>
+                        <ul>
+                           <li><a href="http://d-nb.info/gnd/4066009-6">GND</a></li>
+                           <li><a href="https://sws.geonames.org/2761369">GEONAMES</a></li>
+                           <li><a href="https://www.wikidata.org/entity/Q1741">WIKIDATA</a></li>
+                        </ul>
                      </td>
-                     <td>A 70/41Antiphonas Festorum PrincipaliorumLibellus AntiphonarumS 1/29Cantus EcclesiasticusOrdo agendorum et cantandorum in actibus processionalibusOrdo agendorum et cantandorum in actibus processionalibusA-Gf_A67_21_Grad_Part3</td>
+                     <td>
+                        <ul>
+                           <li><a href="A64_41.html">A 70/41</a></li>
+                           <li><a href="70_45.html">Antiphonas Festorum Principaliorum</a></li>
+                           <li><a href="A70_23.html">Libellus Antiphonarum</a></li>
+                           <li><a href="S1_29.html">S 1/29</a></li>
+                           <li><a href="S1_40a.html">Cantus Ecclesiasticus</a></li>
+                           <li><a href="S1_75.html">Ordo agendorum et cantandorum in actibus processionalibus</a></li>
+                           <li><a href="S1_74.html">Ordo agendorum et cantandorum in actibus processionalibus</a></li>
+                           <li><a href="A67_21.html">A-Gf_A67_21_Grad_Part3</a></li>
+                        </ul>
+                     </td>
                   </tr>
                   <tr>
-                     <td><a href="Salzburg.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>Salzburg</td>
                      <td>47.8</td>
                      <td>13.045</td>
                      <td> # Salzburg</td>
-                     <td>https://sws.geonames.org/2766818
-                        <idno type="URL" subtype="GEONAMES">https://sws.geonames.org/2761369</idno>
+                     <td>
+                        <ul>
+                           <li><a href="http://d-nb.info/gnd/4062501-1">GND</a></li>
+                           <li><a href="https://sws.geonames.org/2766818">GEONAMES</a></li>
+                           <li><a href="http://www.wikidata.org/entity/Q34713">WIKIDATA</a></li>
+                        </ul>
                      </td>
-                     <td>Hymni Sacri Breviarii Romani Urbani Papae VIII Auctoritate recognitiHymni Sacri Breviarii Romani Urbani Papae VIII Auctoritate recognitiHymnarium Sacrum tam Romanum Urbani Papae VIII recognitumS 1/72Hymni Sacri Breviarii Romani Urbani Papae VIII Auctoritate recogniti</td>
+                     <td>
+                        <ul>
+                           <li><a href="S1_63.html">Hymni Sacri Breviarii Romani Urbani Papae VIII Auctoritate recogniti</a></li>
+                           <li><a href="S1_70.html">Hymni Sacri Breviarii Romani Urbani Papae VIII Auctoritate recogniti</a></li>
+                           <li><a href="S1_62.html">Hymnarium Sacrum tam Romanum Urbani Papae VIII recognitum</a></li>
+                           <li><a href="S1_72.html">S 1/72</a></li>
+                           <li><a href="S1_61.html">Hymni Sacri Breviarii Romani Urbani Papae VIII Auctoritate recogniti</a></li>
+                        </ul>
+                     </td>
                   </tr>
                   <tr>
-                     <td><a href="Venedig.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>Venedig</td>
                      <td>45.439722222222</td>
                      <td>12.331944444444</td>
                      <td> # Venedig</td>
-                     <td>https://sws.geonames.org/3164603
-                        <idno type="URL" subtype="GEONAMES">https://sws.geonames.org/2761369</idno>
+                     <td>
+                        <ul>
+                           <li><a href="http://d-nb.info/gnd/4062501-1/4062501-1">GND</a></li>
+                           <li><a href="https://sws.geonames.org/3164603">GEONAMES</a></li>
+                           <li><a href="https://www.wikidata.org/entity/Q641">WIKIDATA</a></li>
+                        </ul>
                      </td>
-                     <td>S 1/66S 1/65Antiphonarium de Sanctis Trium Ordinum Sancti Patris FrancisciPsalterium Romanum dispositum per HebdomadamAntiphonarium de Sanctis Ordinis MinorumS 1/68</td>
+                     <td>
+                        <ul>
+                           <li><a href="S1_66.html">S 1/66</a></li>
+                           <li><a href="S1_65.html">S 1/65</a></li>
+                           <li><a href="S1_69.html">Antiphonarium de Sanctis Trium Ordinum Sancti Patris Francisci</a></li>
+                           <li><a href="S1_64.html">Psalterium Romanum dispositum per Hebdomadam</a></li>
+                           <li><a href="S1_67.html">Antiphonarium de Sanctis Ordinis Minorum</a></li>
+                           <li><a href="S1_68.html">S 1/68</a></li>
+                        </ul>
+                     </td>
                   </tr>
                   <tr>
-                     <td><a href="MariaLankowitz.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>Maria Lankowitz</td>
                      <td>47.063888888889</td>
                      <td>15.063055555556</td>
                      <td> # MariaLankowitz</td>
-                     <td>https://sws.geonames.org/2771922
-                        <idno type="URL" subtype="GEONAMES">https://sws.geonames.org/2761369</idno>
+                     <td>
+                        <ul>
+                           <li><a href="http://d-nb.info/gnd/4400654-8">GND</a></li>
+                           <li><a href="https://sws.geonames.org/2771922">GEONAMES</a></li>
+                           <li><a href="https://www.wikidata.org/entity/Q699807">WIKIDATA</a></li>
+                        </ul>
                      </td>
-                     <td>A 64/37A 64/34S 1/22S 1/40</td>
+                     <td>
+                        <ul>
+                           <li><a href="A64_37.html">A 64/37</a></li>
+                           <li><a href="A64_34.html">A 64/34</a></li>
+                           <li><a href="S1_22.html">S 1/22</a></li>
+                           <li><a href="S1_40.html">S 1/40</a></li>
+                        </ul>
+                     </td>
                   </tr>
                   <tr>
-                     <td><a href="Muenchen.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>München</td>
                      <td>48.1375</td>
                      <td>11.575</td>
                      <td> # Muenchen</td>
-                     <td>https://sws.geonames.org/6559171
-                        <idno type="URL" subtype="GEONAMES">https://sws.geonames.org/2761369</idno>
+                     <td>
+                        <ul>
+                           <li><a href="http://d-nb.info/gnd/4127793-4">GND</a></li>
+                           <li><a href="https://sws.geonames.org/6559171">GEONAMES</a></li>
+                           <li><a href="https://www.wikidata.org/entity/Q1726">WIKIDATA</a></li>
+                        </ul>
                      </td>
-                     <td>A 67/23A 67/19A 67/17A 67/18A 67/20Pro divino officio in choroA 67/22</td>
+                     <td>
+                        <ul>
+                           <li><a href="A67_23.html">A 67/23</a></li>
+                           <li><a href="A67_19.html">A 67/19</a></li>
+                           <li><a href="A67_17.html">A 67/17</a></li>
+                           <li><a href="A67_18.html">A 67/18</a></li>
+                           <li><a href="A67_20.html">A 67/20</a></li>
+                           <li><a href="A67_27.html">Pro divino officio in choro</a></li>
+                           <li><a href="A67_22.html">A 67/22</a></li>
+                        </ul>
+                     </td>
                   </tr>
                   <tr>
-                     <td><a href="StPoelten.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>St. Pölten</td>
                      <td>48.2</td>
                      <td>15.616666666667</td>
                      <td> # StPoelten</td>
-                     <td>https://sws.geonames.org/2766426
-                        <idno type="URL" subtype="GEONAMES">https://sws.geonames.org/2761369</idno>
+                     <td>
+                        <ul>
+                           <li><a href="http://d-nb.info/gnd/4051622-2">GND</a></li>
+                           <li><a href="https://sws.geonames.org/2766426">GEONAMES</a></li>
+                           <li><a href="https://www.wikidata.org/entity/Q82500">WIKIDATA</a></li>
+                        </ul>
                      </td>
-                     <td>A 67/44S 1/58</td>
+                     <td>
+                        <ul>
+                           <li><a href="A67_44.html">A 67/44</a></li>
+                           <li><a href="S1_58.html">S 1/58</a></li>
+                        </ul>
+                     </td>
                   </tr>
                   <tr>
-                     <td><a href="MauterninSteiermark.html"><i class="bi bi-link-45deg"></i></a></td>
                      <td>Mautern in Steiermark</td>
                      <td>47.4</td>
                      <td>14.833333333333</td>
                      <td> # MauterninSteiermark</td>
-                     <td>https://sws.geonames.org/2771761
-                        <idno type="URL" subtype="GEONAMES">https://sws.geonames.org/2761369</idno>
+                     <td>
+                        <ul>
+                           <li><a href="http://d-nb.info/gnd/4115047-8">GND</a></li>
+                           <li><a href="https://sws.geonames.org/2771761">GEONAMES</a></li>
+                           <li><a href="https://www.wikidata.org/entity/Q258162">WIKIDATA</a></li>
+                        </ul>
                      </td>
-                     <td>S 1/23</td>
+                     <td>
+                        <ul>
+                           <li><a href="S1_23.html">S 1/23</a></li>
+                        </ul>
+                     </td>
                   </tr>
                </tbody>
             </table>
