deploy: 0cc8432b74396950c125f026e4f9c2bfd152fdb2

--- a/toc.html
+++ b/toc.html
@@ -250,7 +250,7 @@
                      <td>
                         Prozessionale
                         </td>
-                     <td></td>
+                     <td><a href="Wien.html">Wien</a></td>
                      <td><a href="Voigt.html">Leopold Voigt</a></td>
                      <td>112</td>
                      <td>534</td>
@@ -321,7 +321,7 @@
                      <td>
                         Prozessionale
                         </td>
-                     <td></td>
+                     <td><a href="Wien.html">Wien</a></td>
                      <td>[Handschrift]</td>
                      <td>70</td>
                      <td>165</td>
@@ -472,24 +472,26 @@
                      <td>In progress</td>
                   </tr>
                   <tr>
-                     <td><a href="A67_21.html">Tota pulchra</a></td>
+                     <td><a href="A67_21.html">A 67/22</a></td>
                      <td><a href="A67_21.xml">A67_21.xml</a></td>
-                     <td>1710</td>
-                     <td>1710</td>
+                     <td>1450</td>
+                     <td>1500</td>
                      <td>
-                        OFM
+                        OSC
                         </td>
                      <td>
-                        Gesänge
+                        Graduale
+                        , 
+                        Teil
                         </td>
-                     <td><a href="Graz.html">Graz</a></td>
+                     <td><a href="Muenchen.html">München?</a>, <a href="Graz.html">Graz</a></td>
                      <td>[Handschrift]</td>
-                     <td>114</td>
-                     <td>340</td>
-                     <td>230</td>
+                     <td>136</td>
+                     <td>210</td>
+                     <td>160</td>
                      <td>
-                        Tota pulchra, Lauretanische Litaneien, choraliter / figuraliter, mensuriert
-                        Marianische Gesänge
+                        
+                        Graduale, Teil 4
                         </td>
                      <td>In progress</td>
                   </tr>
@@ -575,7 +577,7 @@
                      <td>
                         Prozessionale
                         </td>
-                     <td></td>
+                     <td><a href="Wien.html">Wien</a></td>
                      <td><a href="Voigt.html">Leopold Voigt</a></td>
                      <td>112</td>
                      <td>534</td>
@@ -678,7 +680,7 @@
                      <td>
                         Intonationsbüchlein
                         </td>
-                     <td></td>
+                     <td><a href="Wien.html">Wien</a></td>
                      <td>[Handschrift]</td>
                      <td>70</td>
                      <td>160</td>
