--- a/listperson.html
+++ b/listperson.html
@@ -66,41 +66,29 @@
             <table class="table" id="myTable">
                <thead>
                   <tr>
-                     <th scope="col" width="20" tabulator-formatter="html" tabulator-headerSort="false" tabulator-download="false">#</th>
-                     <th scope="col" tabulator-headerFilter="input">Nachname</th>
-                     <th scope="col" tabulator-headerFilter="input">Vorname</th>
-                     <th scope="col" tabulator-headerFilter="input">ID</th>
+                     <th scope="col" tabulator-headerFilter="input" tabulator-formatter="html" tabulator-download="false">Name</th>
+                     <th scope="col" tabulator-headerFilter="input" tabulator-visible="false">ID</th>
                   </tr>
                </thead>
                <tbody>
                   <tr>
-                     <td><a href="Voigt.html"><i class="bi bi-link-45deg"></i></a></td>
-                     <td>Voigt</td>
-                     <td>Leopold</td>
+                     <td><a href="Voigt.html">Leopold Voigt</a></td>
                      <td>Voigt</td>
                   </tr>
                   <tr>
-                     <td><a href="Mayr.html"><i class="bi bi-link-45deg"></i></a></td>
-                     <td>Mayr</td>
-                     <td>Johann Baptist</td>
+                     <td><a href="Mayr.html">Johann Baptist Mayr</a></td>
                      <td>Mayr</td>
                   </tr>
                   <tr>
-                     <td><a href="Pezzana.html"><i class="bi bi-link-45deg"></i></a></td>
-                     <td>Pezzana</td>
-                     <td>Giovanni Antonio</td>
+                     <td><a href="Pezzana.html">Giovanni Antonio Pezzana</a></td>
                      <td>Pezzana</td>
                   </tr>
                   <tr>
-                     <td><a href="Balleoni.html"><i class="bi bi-link-45deg"></i></a></td>
-                     <td>Baglioni</td>
-                     <td>Paolo</td>
+                     <td><a href="Balleoni.html">Paolo Baglioni</a></td>
                      <td>Balleoni</td>
                   </tr>
                   <tr>
-                     <td><a href="Ciera.html"><i class="bi bi-link-45deg"></i></a></td>
-                     <td>Ciera</td>
-                     <td>Pietro</td>
+                     <td><a href="Ciera.html">Pietro Ciera</a></td>
                      <td>Ciera</td>
                   </tr>
                </tbody>
