deploy: 039bd2962727c42e136c871052ac787f896a2768

--- a/listperson.html
+++ b/listperson.html
@@ -67,28 +67,34 @@
                <thead>
                   <tr>
                      <th scope="col" tabulator-headerFilter="input" tabulator-formatter="html" tabulator-download="false">Name</th>
+                     <th scope="col" tabulator-headerFilter="input" tabulator-formatter="html" tabulator-download="false">Residence</th>
                      <th scope="col" tabulator-headerFilter="input" tabulator-visible="false">ID</th>
                   </tr>
                </thead>
                <tbody>
                   <tr>
                      <td><a href="Voigt.html">Leopold Voigt</a></td>
+                     <td><a href="Wien.html" target="_blank">Wien</a></td>
                      <td>Voigt</td>
                   </tr>
                   <tr>
                      <td><a href="Mayr.html">Johann Baptist Mayr</a></td>
+                     <td><a href="Salzburg.html" target="_blank">Salzburg</a></td>
                      <td>Mayr</td>
                   </tr>
                   <tr>
                      <td><a href="Pezzana.html">Giovanni Antonio Pezzana</a></td>
+                     <td><a href="Venedig.html" target="_blank">Venedig</a></td>
                      <td>Pezzana</td>
                   </tr>
                   <tr>
                      <td><a href="Balleoni.html">Paolo Baglioni</a></td>
+                     <td><a href="Venedig.html" target="_blank">Venedig</a></td>
                      <td>Balleoni</td>
                   </tr>
                   <tr>
                      <td><a href="Ciera.html">Pietro Ciera</a></td>
+                     <td><a href="Venedig.html" target="_blank">Venedig</a></td>
                      <td>Ciera</td>
                   </tr>
                </tbody>
