deploy: 5d9606db7794b5206ee99fe9f4b7790e452deada

--- a/listplace.html
+++ b/listplace.html
@@ -67,7 +67,7 @@
             <table class="table" id="placesTable">
                <thead>
                   <tr>
-                     <th scope="col">name</th>
+                     <th scope="col" tabulator-formatter="html">name</th>
                      <th scope="col">lat</th>
                      <th scope="col">lng</th>
                      <th scope="col" tabulator-visible="false">id</th>
@@ -77,7 +77,7 @@
                </thead>
                <tbody>
                   <tr>
-                     <td>Graz</td>
+                     <td><a href="Graz.html">Graz</a></td>
                      <td>47.07083333333333</td>
                      <td>15.438611111111111</td>
                      <td> # Graz</td>
@@ -123,7 +123,7 @@
                      </td>
                   </tr>
                   <tr>
-                     <td>Ljubljana</td>
+                     <td><a href="Ljubljana.html">Ljubljana</a></td>
                      <td>46.05138888888889</td>
                      <td>14.50611111111111</td>
                      <td> # Ljubljana</td>
@@ -148,7 +148,7 @@
                      </td>
                   </tr>
                   <tr>
-                     <td>Wien</td>
+                     <td><a href="Wien.html">Wien</a></td>
                      <td>48.208333333333336</td>
                      <td>16.3725</td>
                      <td> # Wien</td>
@@ -173,7 +173,7 @@
                      </td>
                   </tr>
                   <tr>
-                     <td>Salzburg</td>
+                     <td><a href="Salzburg.html">Salzburg</a></td>
                      <td>47.8</td>
                      <td>13.045</td>
                      <td> # Salzburg</td>
@@ -195,7 +195,7 @@
                      </td>
                   </tr>
                   <tr>
-                     <td>Venedig</td>
+                     <td><a href="Venedig.html">Venedig</a></td>
                      <td>45.439722222222</td>
                      <td>12.331944444444</td>
                      <td> # Venedig</td>
@@ -218,7 +218,7 @@
                      </td>
                   </tr>
                   <tr>
-                     <td>Maria Lankowitz</td>
+                     <td><a href="MariaLankowitz.html">Maria Lankowitz</a></td>
                      <td>47.063888888889</td>
                      <td>15.063055555556</td>
                      <td> # MariaLankowitz</td>
@@ -239,7 +239,7 @@
                      </td>
                   </tr>
                   <tr>
-                     <td>München</td>
+                     <td><a href="Muenchen.html">München</a></td>
                      <td>48.1375</td>
                      <td>11.575</td>
                      <td> # Muenchen</td>
@@ -263,7 +263,7 @@
                      </td>
                   </tr>
                   <tr>
-                     <td>St. Pölten</td>
+                     <td><a href="StPoelten.html">St. Pölten</a></td>
                      <td>48.2</td>
                      <td>15.616666666667</td>
                      <td> # StPoelten</td>
@@ -282,7 +282,7 @@
                      </td>
                   </tr>
                   <tr>
-                     <td>Mautern in Steiermark</td>
+                     <td><a href="MauterninSteiermark.html">Mautern in Steiermark</a></td>
                      <td>47.4</td>
                      <td>14.833333333333</td>
                      <td> # MauterninSteiermark</td>
