--- a/Graz.html
+++ b/Graz.html
@@ -6,7 +6,7 @@
       <meta  name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <meta  name="mobile-web-app-capable" content="yes">
       <meta  name="apple-mobile-web-app-capable" content="yes">
-      <meta  name="apple-mobile-web-app-title" content="Orte">
+      <meta  name="apple-mobile-web-app-title" content="Graz">
       <meta  name="msapplication-TileColor" content="#ffffff">
       <meta  name="msapplication-TileImage" content="images/logo.png">
       <link  rel="None" type="image/ico" href="images/favicons/favicon.ico">
@@ -32,7 +32,7 @@
       <link  rel="shortcut icon" type="image/png" href="images/favicons/favicon-196x196.png">
       <link  rel="icon" type="image/svg+xml" href="images/logo.png" sizes="any">
       <link  rel="profile" href="http://gmpg.org/xfn/11">
-      <title >Orte</title>
+      <title >Graz</title>
       <link  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
       <link  rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
       <link  rel="stylesheet" href="css/style.css" type="text/css">
@@ -62,32 +62,31 @@
       </header>
       <main>
          <div class="container">
-            <h1 class="text-center pb-4 pt-3">Orte</h1>
-            <div id="places_div"></div>
-            <table class="table" id="placesTable">
-               <thead>
-                  <tr>
-                     <th scope="col" tabulator-formatter="html">name</th>
-                     <th scope="col">lat</th>
-                     <th scope="col">lng</th>
-                     <th scope="col" tabulator-visible="false">id</th>
-                     <th scope="col">authority</th>
-                     <th scope="col">related_objects</th>
-                  </tr>
-               </thead>
+            <h1 class="text-center pb-4 pt-3">Graz</h1>
+            <table class="table entity-table">
                <tbody>
                   <tr>
-                     <td><a href="Graz.html">Graz</a></td>
+                     <th>
+                        Ortsname
+                        			<a data-i18n="place__placename"></a></th>
+                     <td>Graz</td>
+                  </tr>
+                  <tr>
+                     <th>
+                        Latitude
+                        </th>
                      <td>47.07083333333333</td>
+                  </tr>
+                  <tr>
+                     <th>
+                        Longitude
+                        </th>
                      <td>15.438611111111111</td>
-                     <td> # Graz</td>
-                     <td>
-                        <ul>
-                           <li><a href="http://d-nb.info/gnd/4021912-4">GND</a></li>
-                           <li><a href="https://sws.geonames.org/2778058">GEONAMES</a></li>
-                           <li><a href="https://www.wikidata.org/entity/Q13298">WIKIDATA</a></li>
-                        </ul>
-                     </td>
+                  </tr>
+                  <tr>
+                     <th>
+                        Erwähnt in
+                        </th>
                      <td>
                         <ul>
                            <li><a href="A67_41.html">Das 4. Respons Buch</a></li>
@@ -122,187 +121,9 @@
                         </ul>
                      </td>
                   </tr>
-                  <tr>
-                     <td><a href="Ljubljana.html">Ljubljana</a></td>
-                     <td>46.05138888888889</td>
-                     <td>14.50611111111111</td>
-                     <td> # Ljubljana</td>
-                     <td>
-                        <ul>
-                           <li><a href="http://d-nb.info/gnd/4073953-3">GND</a></li>
-                           <li><a href="https://sws.geonames.org/3239318">GEONAMES</a></li>
-                           <li><a href="https://www.wikidata.org/entity/Q437">WIKIDATA</a></li>
-                        </ul>
-                     </td>
-                     <td>
-                        <ul>
-                           <li><a href="A64_41.html">A 64/41</a></li>
-                           <li><a href="A67_42.html">A 64/42</a></li>
-                           <li><a href="A64_39.html">A 64/39</a></li>
-                           <li><a href="A64_43.html">A 64/43</a></li>
-                           <li><a href="A64_37.html">A 64/37</a></li>
-                           <li><a href="A64_51.html">A 64/51</a></li>
-                           <li><a href="A64_40.html">A 64/40</a></li>
-                           <li><a href="A64_38.html">A 64/38</a></li>
-                        </ul>
-                     </td>
-                  </tr>
-                  <tr>
-                     <td><a href="Wien.html">Wien</a></td>
-                     <td>48.208333333333336</td>
-                     <td>16.3725</td>
-                     <td> # Wien</td>
-                     <td>
-                        <ul>
-                           <li><a href="http://d-nb.info/gnd/4066009-6">GND</a></li>
-                           <li><a href="https://sws.geonames.org/2761369">GEONAMES</a></li>
-                           <li><a href="https://www.wikidata.org/entity/Q1741">WIKIDATA</a></li>
-                        </ul>
-                     </td>
-                     <td>
-                        <ul>
-                           <li><a href="A64_41.html">A 70/41</a></li>
-                           <li><a href="70_45.html">Antiphonas Festorum Principaliorum</a></li>
-                           <li><a href="A70_23.html">Libellus Antiphonarum</a></li>
-                           <li><a href="S1_29.html">S 1/29</a></li>
-                           <li><a href="S1_40a.html">Cantus Ecclesiasticus</a></li>
-                           <li><a href="S1_75.html">Ordo agendorum et cantandorum in actibus processionalibus</a></li>
-                           <li><a href="S1_74.html">Ordo agendorum et cantandorum in actibus processionalibus</a></li>
-                           <li><a href="A67_21.html">A-Gf_A67_21_Grad_Part3</a></li>
-                        </ul>
-                     </td>
-                  </tr>
-                  <tr>
-                     <td><a href="Salzburg.html">Salzburg</a></td>
-                     <td>47.8</td>
-                     <td>13.045</td>
-                     <td> # Salzburg</td>
-                     <td>
-                        <ul>
-                           <li><a href="http://d-nb.info/gnd/4062501-1">GND</a></li>
-                           <li><a href="https://sws.geonames.org/2766818">GEONAMES</a></li>
-                           <li><a href="http://www.wikidata.org/entity/Q34713">WIKIDATA</a></li>
-                        </ul>
-                     </td>
-                     <td>
-                        <ul>
-                           <li><a href="S1_63.html">Hymni Sacri Breviarii Romani Urbani Papae VIII Auctoritate recogniti</a></li>
-                           <li><a href="S1_70.html">Hymni Sacri Breviarii Romani Urbani Papae VIII Auctoritate recogniti</a></li>
-                           <li><a href="S1_62.html">Hymnarium Sacrum tam Romanum Urbani Papae VIII recognitum</a></li>
-                           <li><a href="S1_72.html">S 1/72</a></li>
-                           <li><a href="S1_61.html">Hymni Sacri Breviarii Romani Urbani Papae VIII Auctoritate recogniti</a></li>
-                        </ul>
-                     </td>
-                  </tr>
-                  <tr>
-                     <td><a href="Venedig.html">Venedig</a></td>
-                     <td>45.439722222222</td>
-                     <td>12.331944444444</td>
-                     <td> # Venedig</td>
-                     <td>
-                        <ul>
-                           <li><a href="http://d-nb.info/gnd/4062501-1/4062501-1">GND</a></li>
-                           <li><a href="https://sws.geonames.org/3164603">GEONAMES</a></li>
-                           <li><a href="https://www.wikidata.org/entity/Q641">WIKIDATA</a></li>
-                        </ul>
-                     </td>
-                     <td>
-                        <ul>
-                           <li><a href="S1_66.html">S 1/66</a></li>
-                           <li><a href="S1_65.html">S 1/65</a></li>
-                           <li><a href="S1_69.html">Antiphonarium de Sanctis Trium Ordinum Sancti Patris Francisci</a></li>
-                           <li><a href="S1_64.html">Psalterium Romanum dispositum per Hebdomadam</a></li>
-                           <li><a href="S1_67.html">Antiphonarium de Sanctis Ordinis Minorum</a></li>
-                           <li><a href="S1_68.html">S 1/68</a></li>
-                        </ul>
-                     </td>
-                  </tr>
-                  <tr>
-                     <td><a href="MariaLankowitz.html">Maria Lankowitz</a></td>
-                     <td>47.063888888889</td>
-                     <td>15.063055555556</td>
-                     <td> # MariaLankowitz</td>
-                     <td>
-                        <ul>
-                           <li><a href="http://d-nb.info/gnd/4400654-8">GND</a></li>
-                           <li><a href="https://sws.geonames.org/2771922">GEONAMES</a></li>
-                           <li><a href="https://www.wikidata.org/entity/Q699807">WIKIDATA</a></li>
-                        </ul>
-                     </td>
-                     <td>
-                        <ul>
-                           <li><a href="A64_37.html">A 64/37</a></li>
-                           <li><a href="A64_34.html">A 64/34</a></li>
-                           <li><a href="S1_22.html">S 1/22</a></li>
-                           <li><a href="S1_40.html">S 1/40</a></li>
-                        </ul>
-                     </td>
-                  </tr>
-                  <tr>
-                     <td><a href="Muenchen.html">München</a></td>
-                     <td>48.1375</td>
-                     <td>11.575</td>
-                     <td> # Muenchen</td>
-                     <td>
-                        <ul>
-                           <li><a href="http://d-nb.info/gnd/4127793-4">GND</a></li>
-                           <li><a href="https://sws.geonames.org/6559171">GEONAMES</a></li>
-                           <li><a href="https://www.wikidata.org/entity/Q1726">WIKIDATA</a></li>
-                        </ul>
-                     </td>
-                     <td>
-                        <ul>
-                           <li><a href="A67_23.html">A 67/23</a></li>
-                           <li><a href="A67_19.html">A 67/19</a></li>
-                           <li><a href="A67_17.html">A 67/17</a></li>
-                           <li><a href="A67_18.html">A 67/18</a></li>
-                           <li><a href="A67_20.html">A 67/20</a></li>
-                           <li><a href="A67_27.html">Pro divino officio in choro</a></li>
-                           <li><a href="A67_22.html">A 67/22</a></li>
-                        </ul>
-                     </td>
-                  </tr>
-                  <tr>
-                     <td><a href="StPoelten.html">St. Pölten</a></td>
-                     <td>48.2</td>
-                     <td>15.616666666667</td>
-                     <td> # StPoelten</td>
-                     <td>
-                        <ul>
-                           <li><a href="http://d-nb.info/gnd/4051622-2">GND</a></li>
-                           <li><a href="https://sws.geonames.org/2766426">GEONAMES</a></li>
-                           <li><a href="https://www.wikidata.org/entity/Q82500">WIKIDATA</a></li>
-                        </ul>
-                     </td>
-                     <td>
-                        <ul>
-                           <li><a href="A67_44.html">A 67/44</a></li>
-                           <li><a href="S1_58.html">S 1/58</a></li>
-                        </ul>
-                     </td>
-                  </tr>
-                  <tr>
-                     <td><a href="MauterninSteiermark.html">Mautern in Steiermark</a></td>
-                     <td>47.4</td>
-                     <td>14.833333333333</td>
-                     <td> # MauterninSteiermark</td>
-                     <td>
-                        <ul>
-                           <li><a href="http://d-nb.info/gnd/4115047-8">GND</a></li>
-                           <li><a href="https://sws.geonames.org/2771761">GEONAMES</a></li>
-                           <li><a href="https://www.wikidata.org/entity/Q258162">WIKIDATA</a></li>
-                        </ul>
-                     </td>
-                     <td>
-                        <ul>
-                           <li><a href="S1_23.html">S 1/23</a></li>
-                        </ul>
-                     </td>
-                  </tr>
                </tbody>
             </table>
-            <h4>Download Table</h4>
-            <div class="button-group"><button type="button" class="btn btn-outline-secondary" id="download-csv" title="Download CSV"><i class="bi bi-filetype-csv"></i><span class="visually-hidden">Download CSV</span></button><button type="button" class="btn btn-outline-secondary" id="download-json" title="Download JSON"><i class="bi bi-filetype-json"></i><span class="visually-hidden">Download JSON</span></button><button type="button" class="btn btn-outline-secondary" id="download-html" title="Download HTML"><i class="bi bi-filetype-html"></i><span class="visually-hidden">Download HTML</span></button></div>
+            <div id="map_detail"></div>
          </div>
       </main>
       <footer  class="footer mt-auto py-3 bg-body-tertiary">
@@ -342,7 +163,15 @@ function addDarkmodeWidget() {
 	new Darkmode().showWidget();
 }
 window.addEventListener('load', addDarkmodeWidget);
-</script><script  src="js/i18n.js"></script><script type="text/javascript" src="https://unpkg.com/tabulator-tables@5.5.2/dist/js/tabulator.min.js"></script><script src="js/make_map_and_table.js"></script><script src="js/table_map_cfg.js"></script><script>
-                    build_map_and_table(map_cfg, table_cfg);
-                </script></body>
+</script><script  src="js/i18n.js"></script><link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""><script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script><script>
+                                var lat = 47.07083333333333;
+                                var long = 15.438611111111111;
+                                $("#map_detail").css("height", "500px");
+                                var map = L.map('map_detail').setView([Number(lat), Number(long)], 13);
+                                L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+                                maxZoom: 19,
+                                attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
+                                }).addTo(map);
+                                var marker = L.marker([Number(lat), Number(long)]).addTo(map);
+                            </script></body>
 </html>
