--- a/StPoelten.html
+++ b/StPoelten.html
@@ -66,27 +66,29 @@
             <table class="table entity-table">
                <tbody>
                   <tr>
-                     <th>
-                        Ortsname
-                        			<a data-i18n="place__placename"></a></th>
+                     <th> Ortsname <a data-i18n="place__placename"></a></th>
                      <td>St. Pölten</td>
                   </tr>
                   <tr>
-                     <th>
-                        Latitude
-                        </th>
+                     <th> Authority </th>
+                     <td>
+                        <ul>
+                           <li><a href="http://d-nb.info/gnd/4051622-2">GND</a></li>
+                           <li><a href="https://sws.geonames.org/2766426">GEONAMES</a></li>
+                           <li><a href="https://www.wikidata.org/entity/Q82500">WIKIDATA</a></li>
+                        </ul>
+                     </td>
+                  </tr>
+                  <tr>
+                     <th> Latitude </th>
                      <td>48.2</td>
                   </tr>
                   <tr>
-                     <th>
-                        Longitude
-                        </th>
+                     <th> Longitude </th>
                      <td>15.616666666667</td>
                   </tr>
                   <tr>
-                     <th>
-                        Erwähnt in
-                        </th>
+                     <th> Erwähnt in </th>
                      <td>
                         <ul>
                            <li><a href="A67_44.html">A 67/44</a></li>
