--- a/Venedig.html
+++ b/Venedig.html
@@ -66,27 +66,29 @@
             <table class="table entity-table">
                <tbody>
                   <tr>
-                     <th>
-                        Ortsname
-                        			<a data-i18n="place__placename"></a></th>
+                     <th> Ortsname <a data-i18n="place__placename"></a></th>
                      <td>Venedig</td>
                   </tr>
                   <tr>
-                     <th>
-                        Latitude
-                        </th>
+                     <th> Authority </th>
+                     <td>
+                        <ul>
+                           <li><a href="http://d-nb.info/gnd/4062501-1/4062501-1">GND</a></li>
+                           <li><a href="https://sws.geonames.org/3164603">GEONAMES</a></li>
+                           <li><a href="https://www.wikidata.org/entity/Q641">WIKIDATA</a></li>
+                        </ul>
+                     </td>
+                  </tr>
+                  <tr>
+                     <th> Latitude </th>
                      <td>45.439722222222</td>
                   </tr>
                   <tr>
-                     <th>
-                        Longitude
-                        </th>
+                     <th> Longitude </th>
                      <td>12.331944444444</td>
                   </tr>
                   <tr>
-                     <th>
-                        Erwähnt in
-                        </th>
+                     <th> Erwähnt in </th>
                      <td>
                         <ul>
                            <li><a href="S1_66.html">S 1/66</a></li>
