--- a/Graz.html
+++ b/Graz.html
@@ -66,27 +66,29 @@
             <table class="table entity-table">
                <tbody>
                   <tr>
-                     <th>
-                        Ortsname
-                        			<a data-i18n="place__placename"></a></th>
+                     <th> Ortsname <a data-i18n="place__placename"></a></th>
                      <td>Graz</td>
                   </tr>
                   <tr>
-                     <th>
-                        Latitude
-                        </th>
+                     <th> Authority </th>
+                     <td>
+                        <ul>
+                           <li><a href="http://d-nb.info/gnd/4021912-4">GND</a></li>
+                           <li><a href="https://sws.geonames.org/2778058">GEONAMES</a></li>
+                           <li><a href="https://www.wikidata.org/entity/Q13298">WIKIDATA</a></li>
+                        </ul>
+                     </td>
+                  </tr>
+                  <tr>
+                     <th> Latitude </th>
                      <td>47.07083333333333</td>
                   </tr>
                   <tr>
-                     <th>
-                        Longitude
-                        </th>
+                     <th> Longitude </th>
                      <td>15.438611111111111</td>
                   </tr>
                   <tr>
-                     <th>
-                        Erwähnt in
-                        </th>
+                     <th> Erwähnt in </th>
                      <td>
                         <ul>
                            <li><a href="A67_41.html">Das 4. Respons Buch</a></li>
