--- a/Ljubljana.html
+++ b/Ljubljana.html
@@ -66,27 +66,29 @@
             <table class="table entity-table">
                <tbody>
                   <tr>
-                     <th>
-                        Ortsname
-                        			<a data-i18n="place__placename"></a></th>
+                     <th> Ortsname <a data-i18n="place__placename"></a></th>
                      <td>Ljubljana</td>
                   </tr>
                   <tr>
-                     <th>
-                        Latitude
-                        </th>
+                     <th> Authority </th>
+                     <td>
+                        <ul>
+                           <li><a href="http://d-nb.info/gnd/4073953-3">GND</a></li>
+                           <li><a href="https://sws.geonames.org/3239318">GEONAMES</a></li>
+                           <li><a href="https://www.wikidata.org/entity/Q437">WIKIDATA</a></li>
+                        </ul>
+                     </td>
+                  </tr>
+                  <tr>
+                     <th> Latitude </th>
                      <td>46.05138888888889</td>
                   </tr>
                   <tr>
-                     <th>
-                        Longitude
-                        </th>
+                     <th> Longitude </th>
                      <td>14.50611111111111</td>
                   </tr>
                   <tr>
-                     <th>
-                        Erwähnt in
-                        </th>
+                     <th> Erwähnt in </th>
                      <td>
                         <ul>
                            <li><a href="A64_41.html">A 64/41</a></li>
