--- a/Salzburg.html
+++ b/Salzburg.html
@@ -66,27 +66,29 @@
             <table class="table entity-table">
                <tbody>
                   <tr>
-                     <th>
-                        Ortsname
-                        			<a data-i18n="place__placename"></a></th>
+                     <th> Ortsname <a data-i18n="place__placename"></a></th>
                      <td>Salzburg</td>
                   </tr>
                   <tr>
-                     <th>
-                        Latitude
-                        </th>
+                     <th> Authority </th>
+                     <td>
+                        <ul>
+                           <li><a href="http://d-nb.info/gnd/4062501-1">GND</a></li>
+                           <li><a href="https://sws.geonames.org/2766818">GEONAMES</a></li>
+                           <li><a href="http://www.wikidata.org/entity/Q34713">WIKIDATA</a></li>
+                        </ul>
+                     </td>
+                  </tr>
+                  <tr>
+                     <th> Latitude </th>
                      <td>47.8</td>
                   </tr>
                   <tr>
-                     <th>
-                        Longitude
-                        </th>
+                     <th> Longitude </th>
                      <td>13.045</td>
                   </tr>
                   <tr>
-                     <th>
-                        Erwähnt in
-                        </th>
+                     <th> Erwähnt in </th>
                      <td>
                         <ul>
                            <li><a href="S1_63.html">Hymni Sacri Breviarii Romani Urbani Papae VIII Auctoritate recogniti</a></li>
