deploy: eba29d0aab1eab1eb736b8d053076ff4b362d59b

--- a/Ljubljana.html
+++ b/Ljubljana.html
@@ -70,6 +70,10 @@
                      <td>Ljubljana</td>
                   </tr>
                   <tr>
+                     <th> Land </th>
+                     <td>Slovenien</td>
+                  </tr>
+                  <tr>
                      <th> Authority </th>
                      <td>
                         <ul>
