--- a/Muenchen.html
+++ b/Muenchen.html
@@ -70,6 +70,10 @@
                      <td>München</td>
                   </tr>
                   <tr>
+                     <th> Land </th>
+                     <td>Deutschland</td>
+                  </tr>
+                  <tr>
                      <th> Authority </th>
                      <td>
                         <ul>
