--- a/Salzburg.html
+++ b/Salzburg.html
@@ -70,6 +70,10 @@
                      <td>Salzburg</td>
                   </tr>
                   <tr>
+                     <th> Land </th>
+                     <td>Österreich</td>
+                  </tr>
+                  <tr>
                      <th> Authority </th>
                      <td>
                         <ul>
