--- a/Venedig.html
+++ b/Venedig.html
@@ -70,6 +70,10 @@
                      <td>Venedig</td>
                   </tr>
                   <tr>
+                     <th> Land </th>
+                     <td>Italien</td>
+                  </tr>
+                  <tr>
                      <th> Authority </th>
                      <td>
                         <ul>
