deploy: 5b0fb9a7259b3cffcfd4d262b93ef4cc19f90de0

--- a/Balleoni.html
+++ b/Balleoni.html
@@ -85,15 +85,14 @@
                   </tr>
                   <tr>
                      <th>
-                        GND ID
+                        Authority
                         </th>
-                     <td><a href="http://d-nb.info/gnd/1037524810" target="_blank">1037524810</a></td>
-                  </tr>
-                  <tr>
-                     <th>
-                        Wikidata ID
-                        </th>
-                     <td><a href="" target="_blank">Q112399622</a></td>
+                     <td>
+                        <ul>
+                           <li><a href="http://d-nb.info/gnd/1037524810">GND</a></li>
+                           <li><a href="https://www.wikidata.org/entity/Q112399622">WIKIDATA</a></li>
+                        </ul>
+                     </td>
                   </tr>
                   <tr>
                      <th>
