--- a/Ciera.html
+++ b/Ciera.html
@@ -85,9 +85,13 @@
                   </tr>
                   <tr>
                      <th>
-                        GND ID
+                        Authority
                         </th>
-                     <td><a href="https://d-nb.info/gnd/1051039606" target="_blank">1051039606</a></td>
+                     <td>
+                        <ul>
+                           <li><a href="https://d-nb.info/gnd/1051039606">GND</a></li>
+                        </ul>
+                     </td>
                   </tr>
                   <tr>
                      <th>
