--- a/Mayr.html
+++ b/Mayr.html
@@ -85,9 +85,13 @@
                   </tr>
                   <tr>
                      <th>
-                        GND ID
+                        Authority
                         </th>
-                     <td><a href="https://d-nb.info/gnd/124751946" target="_blank">124751946</a></td>
+                     <td>
+                        <ul>
+                           <li><a href="https://d-nb.info/gnd/124751946">GND</a></li>
+                        </ul>
+                     </td>
                   </tr>
                   <tr>
                      <th>
