--- a/Pezzana.html
+++ b/Pezzana.html
@@ -85,15 +85,14 @@
                   </tr>
                   <tr>
                      <th>
-                        GND ID
+                        Authority
                         </th>
-                     <td><a href="http://d-nb.info/gnd/1102696757" target="_blank">1102696757</a></td>
-                  </tr>
-                  <tr>
-                     <th>
-                        Wikidata ID
-                        </th>
-                     <td><a href="" target="_blank">Q105889193</a></td>
+                     <td>
+                        <ul>
+                           <li><a href="http://d-nb.info/gnd/1102696757">GND</a></li>
+                           <li><a href="https://www.wikidata.org/entity/Q105889193">WIKIDATA</a></li>
+                        </ul>
+                     </td>
                   </tr>
                   <tr>
                      <th>
