--- a/Voigt.html
+++ b/Voigt.html
@@ -85,15 +85,14 @@
                   </tr>
                   <tr>
                      <th>
-                        GND ID
+                        Authority
                         </th>
-                     <td><a href="https://d-nb.info/gnd/1037512057" target="_blank">1037512057</a></td>
-                  </tr>
-                  <tr>
-                     <th>
-                        Wikidata ID
-                        </th>
-                     <td><a href="" target="_blank">Q56118770</a></td>
+                     <td>
+                        <ul>
+                           <li><a href="https://d-nb.info/gnd/1037512057">GND</a></li>
+                           <li><a href="http://www.wikidata.org/entity/Q56118770">WIKIDATA</a></li>
+                        </ul>
+                     </td>
                   </tr>
                   <tr>
                      <th>
