--- a/listplace.html
+++ b/listplace.html
@@ -342,7 +342,7 @@ function addDarkmodeWidget() {
 	new Darkmode().showWidget();
 }
 window.addEventListener('load', addDarkmodeWidget);
-</script><script  src="js/i18n.js"></script><script type="text/javascript" src="https://unpkg.com/tabulator-tables@5.5.2/dist/js/tabulator.min.js"></script><script src="js/make_map_and_table.js"></script><script src="js/table_map_cfg.js"></script><script>
+</script><script  src="js/i18n.js"></script><script type="text/javascript" src="https://unpkg.com/tabulator-tables@5.5.2/dist/js/tabulator.min.js"></script><script src="js/make_map_and_table.js"></script><script src="js/map_table_cfg.js"></script><script>
                     build_map_and_table(map_cfg, table_cfg);
                 </script></body>
 </html>
