deploy: 601d1b0b62a7e538f29a4b2edc2905e4b9cbcf23

--- a/Balleoni.html
+++ b/Balleoni.html
@@ -79,7 +79,7 @@
                   </tr>
                   <tr>
                      <th>
-                        Aktiv in
+                        Aktiv in:
                         </th>
                      <td><a href="Venedig.html" target="_blank">Venedig</a></td>
                   </tr>
@@ -96,7 +96,7 @@
                   </tr>
                   <tr>
                      <th>
-                        Erwähnt in
+                        Verantwortlich für:
                         </th>
                      <td>
                         <ul>
