--- a/Pezzana.html
+++ b/Pezzana.html
@@ -79,7 +79,7 @@
                   </tr>
                   <tr>
                      <th>
-                        Aktiv in
+                        Aktiv in:
                         </th>
                      <td><a href="Venedig.html" target="_blank">Venedig</a></td>
                   </tr>
@@ -96,7 +96,7 @@
                   </tr>
                   <tr>
                      <th>
-                        Erwähnt in
+                        Verantwortlich für:
                         </th>
                      <td>
                         <ul>
