deploy: 6d02a824dacb941a8de88f28193b930fe7f01760

--- a/Mayr.html
+++ b/Mayr.html
@@ -79,7 +79,7 @@
                   </tr>
                   <tr>
                      <th>
-                        Aktiv in
+                        Aktiv in:
                         </th>
                      <td><a href="Salzburg.html" target="_blank">Salzburg</a></td>
                   </tr>
@@ -95,7 +95,7 @@
                   </tr>
                   <tr>
                      <th>
-                        Verantwortlich für
+                        Verantwortlich für:
                         </th>
                      <td>
                         <ul>
