--- a/Voigt.html
+++ b/Voigt.html
@@ -79,7 +79,7 @@
                   </tr>
                   <tr>
                      <th>
-                        Aktiv in
+                        Aktiv in:
                         </th>
                      <td><a href="Wien.html" target="_blank">Wien</a></td>
                   </tr>
@@ -96,7 +96,7 @@
                   </tr>
                   <tr>
                      <th>
-                        Verantwortlich für
+                        Verantwortlich für:
                         </th>
                      <td>
                         <ul>
