--- a/Ciera.html
+++ b/Ciera.html
@@ -79,7 +79,7 @@
                   </tr>
                   <tr>
                      <th>
-                        Aktiv in
+                        Aktiv in:
                         </th>
                      <td><a href="Venedig.html" target="_blank">Venedig</a></td>
                   </tr>
@@ -95,7 +95,7 @@
                   </tr>
                   <tr>
                      <th>
-                        Verantwortlich für
+                        Verantwortlich für:
                         </th>
                      <td>
                         <ul>
